Modify stylist views

--- a/app/views/stylists/show.html.erb
+++ b/app/views/stylists/show.html.erb
@@ -1,2 +1,6 @@
 <h1>Stylists#show</h1>
-<p>Find me in app/views/stylists/show.html.erb</p>
+名前:<%= @stylist.name %><br/>
+Email:<%= @stylist.email %><br/>
+強み:<%= @stylist.features %><br/>
+スタイリスト歴:<%= @stylist.stylist_since %><br/>
+カット価格:<%= @stylist.cut_price %>
