--- a/app/views/stylists/index.html.erb
+++ b/app/views/stylists/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Stylists#index</h1>
-<p>Find me in app/views/stylists/index.html.erb</p>
+<% @stylists.each.with_index(1) do |s, i| %>
+  <%= i %>:<%= s.name %>
+<% end %>
