Add salon_reservation model/controller

--- a/app/views/salons/show.html.erb
+++ b/app/views/salons/show.html.erb
@@ -10,3 +10,5 @@ Email:<%= @salon.email %><br/>
 カット価格:<%= @salon.cut_price %><br/>
 所属スタイリスト数:<%= @salon.num_of_stylists %><br/>
 座席数:<%= @salon.num_of_sheets %>
+
+<%#= link_to "Link", new_salon_reservation_path %>
