Add salon_reservation model and Devise for salon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,21 @@
   </head>
 
   <body>
+  <header>
+    <nav>
+      <% if salon_signed_in? %>
+        <strong><%= link_to current_salon.name, salon_session_path %></strong>
+        <%= link_to 'サロン情報変更', edit_salon_registration_path %>
+        <%= link_to 'ログアウト', destroy_salon_session_path, method: :delete %>
+      <% else %>
+        <%= link_to 'サインアップ', new_salon_registration_path %>
+        <%= link_to 'ログイン', new_salon_session_path %>
+      <% end %>
+    </nav>
+  </header>
   <%= render 'shared/flash' %>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
   <%= yield %>
   </body>
 </html>
