--- a/app/views/salon_reservations/show.html.erb
+++ b/app/views/salon_reservations/show.html.erb
@@ -1,2 +1,4 @@
 <h1>SalonReservations#show</h1>
 <p>Find me in app/views/salon_reservations/show.html.erb</p>
+
+<%= @salon_reservation.book_time %>
