--- a/app/views/salons/show.html.erb
+++ b/app/views/salons/show.html.erb
@@ -8,11 +8,11 @@ TEL:<%= @salon.tel %><br/>
 Email:<%= @salon.email %><br/>
 特徴:<%= @salon.features %><br/>
 カット価格:<%= @salon.cut_price %><br/>
-所属スタイリスト数:<%= @salon.num_of_stylists %><br/>
+所属スタイリスト数:<%= link_to @salon.num_of_stylists, salon_member_path(@salon)%><br/>
 座席数:<%= @salon.num_of_sheets %>
 <br/>
 
-<h2>予約一覧</h2>
-<% @reservations.each do |r| %>
-  <%= r.book_time %><br/>
+<h2>予約可能時間一覧</h2>
+<% @reservations.each.with_index(1) do |r, i| %>
+  <%= i %>: <%= link_to r.book_time, salon_registration_path(r) %><br/>
 <% end %>
