--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <header>
     <nav>
       <% if salon_signed_in? %>
-        <strong><%= link_to current_salon.name, salon_session_path %></strong>
+        <strong><%= link_to current_salon.name, salon_path(current_salon.id) %></strong>
         <%= link_to 'サロン情報変更', edit_salon_registration_path %>
         <%= link_to 'ログアウト', destroy_salon_session_path, method: :delete %>
       <% else %>
