--- a/app/views/admin/salons/show.html.erb
+++ b/app/views/admin/salons/show.html.erb
@@ -1,18 +1,25 @@
-<h1><%= @salon.name %></h1>
-カテゴリー:<%= @salon.category.name %><br/>
-サロン名:<%= @salon.name %><br/>
-都道府県:<%= @salon.prefecture.name %><br/>
-場所:<%= @salon.place %><br/>
-責任者:<%= @salon.manage %><br/>
-TEL:<%= @salon.tel %><br/>
-Email:<%= @salon.email %><br/>
-特徴:<%= @salon.features %><br/>
-カット価格:<%= @salon.cut_price %><br/>
-所属スタイリスト数:<%= @salon.num_of_stylists %><br/>
-座席数:<%= @salon.num_of_sheets %>
-<br/>
-aaaaaaaaa
-<h2>予約一覧</h2>
-<% @reservations.each.with_index(1) do |r, i| %>
-  <%= i %>: <%= link_to r.book_time, admin_salon_salon_reservation_path(salon_id: r.salon_id, id: r) %><br/>
-<% end %>
+<div style="width: 15%; height:500px; border: 1px solid;float: left;">
+  <%= render 'admin/salons/sidebar' %>
+</div>
+
+<div style="width:84%; border: 1px solid;float: right; margin: auto 0;">
+  <h1><%= @salon.name %></h1>
+  カテゴリー:<%= @salon.category.name %><br/>
+  サロン名:<%= @salon.name %><br/>
+  都道府県:<%= @salon.prefecture.name %><br/>
+  場所:<%= @salon.place %><br/>
+  責任者:<%= @salon.manage %><br/>
+  TEL:<%= @salon.tel %><br/>
+  Email:<%= @salon.email %><br/>
+  特徴:<%= @salon.features %><br/>
+  カット価格:<%= @salon.cut_price %><br/>
+  所属スタイリスト数:<%= @salon.num_of_stylists %><br/>
+  座席数:<%= @salon.num_of_sheets %>
+  <br/>
+  <%= link_to 'Edit', edit_admin_salon_path %>
+  <%= link_to 'Delete',  admin_salon_path, method: :delete, data: {confirm: "You sure?"} %>
+  <h2>予約一覧</h2>
+  <% @reservations.each.with_index(1) do |r, i| %>
+    <%= i %>: <%= link_to r.book_time, admin_salon_salon_reservation_path(id: r) %><br/>
+  <% end %>
+</div>
