--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
   <%= link_to 'Users', new_user_session_path %>
   <%= link_to 'Salon', new_salon_session_path %>
   <%= link_to 'Stylist', new_stylist_session_path %>
-  <% if current_salon || current_stylist || current_user %>
-    <%= current_salon.name || current_stylist.name || current_user.name %>
-  <% end %>
+  <%# if salon_signed_in? || stylist_signed_in? || user_signed_in? %>
+    <%#= current_salon.name || current_stylist.name || current_user.name %>
+  <%# end %>
 </nav>
