--- a/app/views/admin/stylists/show.html.erb
+++ b/app/views/admin/stylists/show.html.erb
@@ -1,7 +1,13 @@
-<h1>Stylists#show</h1>
-名前:<%= @stylist.name %><br/>
-所属:<%= link_to @stylist.salon_id, salon_path(@stylist.salon_id) %><br/>
-Email:<%= @stylist.email %><br/>
-強み:<%= @stylist.features %><br/>
-スタイリスト歴:<%= @stylist.stylist_since %><br/>
-カット価格:<%= @stylist.cut_price %>
+<div style="width: 15%; height:500px; border: 1px solid;float: left;">
+  <%= render 'admin/stylists/sidebar' %>
+</div>
+
+<div style="width:84%; border: 1px solid;float: right; margin: auto 0;">
+  <h1><%= current_stylist.name %></h1>
+  名前:<%= current_stylist.name %><br/>
+  所属:<%= link_to current_stylist.salon.name, salon_path(@stylist.salon_id) %><br/>
+  Email:<%= current_stylist.email %><br/>
+  強み:<%= current_stylist.features %><br/>
+  スタイリスト歴:<%= Date.today.year - current_stylist.stylist_since %>年<br/>
+  カット価格:<%= current_stylist.cut_price %>
+</div>
