--- a/app/views/admin/salons/_sidebar.html.erb
+++ b/app/views/admin/salons/_sidebar.html.erb
@@ -7,4 +7,5 @@
   <li><%= link_to '取引スタイリスト管理', "#" %></li>
   <li><%= link_to 'サロン利用規約管理', "#" %></li>
   <li><%= link_to '設定', edit_admin_salon_path %></li>
+  <li><%= link_to 'ログアウト', destroy_salon_session_path, method: :delete %></li>
 </ul>
