--- a/app/views/admin/stylists/_sidebar.html.erb
+++ b/app/views/admin/stylists/_sidebar.html.erb
@@ -1,9 +1,11 @@
 <ul>
   <li><%= link_to current_stylist.name, admin_stylist_path %></li>
-  <li><%= link_to "予約可能時間管理", "#" %></li>
+  <li><%= link_to "所属サロン:#{current_stylist.salon.name}", salon_path(@stylist.salon_id) %></li>
+  <li><%= link_to "予約可能時間管理", admin_stylist_menus_path %></li>
   <li><%= link_to "売上管理", "#" %></li>
   <li><%= link_to '顧客カルテ管理', "#" %></li>
   <li><%= link_to '取引サロン管理', "#" %></li>
   <li><%= link_to 'サロン利用規約管理', "#" %></li>
   <li><%= link_to '設定', edit_admin_stylist_path %></li>
+  <li><%= link_to 'ログアウト', destroy_stylist_session_path, method: :delete %></li>
 </ul>
