--- a/app/views/admin/menus/index.html.erb
+++ b/app/views/admin/menus/index.html.erb
@@ -5,7 +5,39 @@
 <div style="width:80%; border: 1px solid;float: right; margin: auto 0; padding: 10px">
   <h2><%= current_stylist.name %></h2>
 
-  <% @menus.each.with_index(1) do |m, i| %>
-    <%= i %>:<%= m.menu_name %><br/>
-  <% end %>
+  <%= render 'admin/menus/form' %>
+
+  <div style="padding-top: 50px; margin-bottom: 50px">
+    <table style="text-align: center; margin: auto; border: 5px solid #1a1a1a;">
+      <caption>メニュー一覧</caption>
+
+      <thead>
+      <tr>
+        <th>メニュー</th>
+        <th>価格</th>
+        <th>施術時間</th>
+        <th>内容</th>
+        <th>備考</th>
+        <th>Show</th>
+        <th>Edit</th>
+        <th>Delete</th>
+      </tr>
+      </thead>
+
+      <tbody>
+      <% @menus.each do |m| %>
+        <tr>
+          <td><%= m.menu_name %></td>
+          <td><%= m.menu_price %>円</td>
+          <td><%= m.operation_time %>分</td>
+          <td><%= m.content %></td>
+          <td><%= m.memo %></td>
+          <td><%= link_to "show", admin_stylist_menu_path(m) %></td>
+          <td><%= link_to "edit", edit_admin_stylist_menu_path(m) %></td>
+          <td><%= link_to "delete", admin_stylist_menu_path(m), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
