--- a/app/views/admin/salon_reservations/_book_new.html.erb
+++ b/app/views/admin/salon_reservations/_book_new.html.erb
@@ -1,4 +1,6 @@
 <%= form_for(@reservation, url: admin_salon_salon_reservations_path) do |f| %>
+  <%= render 'shared/error_messages', object: f.object %>
+
   <div class="field">
     <%= f.label :book_time %>
     <%= f.datetime_select :book_time, minute_step: 15 %>
