--- a/app/views/admin/stylists/index.html.erb
+++ b/app/views/admin/stylists/index.html.erb
@@ -2,7 +2,7 @@
   <%= render 'admin/salons/sidebar' %>
 </div>
 
-<div style="width:84%; border: 1px solid;float: right; margin: auto 0;">
+<div style="width:80%; border: 1px solid;float: right; margin: auto 0;padding-left: 20px;">
   <h1><%= current_salon.name %>所属のスタイリスト一覧</h1>
   <% @stylists.each.with_index(1) do |s, i| %>
     <%= i %>:<%= link_to s.name, stylist_path(s) %>
