--- a/app/views/admin/stylists/show.html.erb
+++ b/app/views/admin/stylists/show.html.erb
@@ -2,12 +2,12 @@
   <%= render 'admin/stylists/sidebar' %>
 </div>
 
-<div style="width:84%; border: 1px solid;float: right; margin: auto 0;">
-  <h1><%= current_stylist.name %></h1>
+<div style="width:80%; border: 1px solid;float: right; margin: auto 0;padding-left: 20px;">
+  <h2><%= current_stylist.name %></h2>
   名前:<%= current_stylist.name %><br/>
   所属:<%= link_to current_stylist.salon.name, salon_path(@stylist.salon_id) %><br/>
   Email:<%= current_stylist.email %><br/>
   強み:<%= current_stylist.features %><br/>
   スタイリスト歴:<%= Date.today.year - current_stylist.stylist_since %>年<br/>
-  カット価格:<%= current_stylist.cut_price %>
+  カット価格:<%= current_stylist.cut_price %>円
 </div>
