--- a/app/views/salons/show.html.erb
+++ b/app/views/salons/show.html.erb
@@ -16,3 +16,5 @@ Email:<%= @salon.email %><br/>
 <% @reservations.each.with_index(1) do |r, i| %>
   <%= i %>: <%= link_to r.book_time, salon_salon_reservation_path(salon_id: r.salon_id, id: r) %><br/>
 <% end %>
+
+<%= link_to '戻る', :back %>
