--- a/app/views/stylists/show.html.erb
+++ b/app/views/stylists/show.html.erb
@@ -3,5 +3,11 @@
 所属:<%= link_to @stylist.salon.name, salon_path(@stylist.salon_id) %><br/>
 Email:<%= @stylist.email %><br/>
 強み:<%= @stylist.features %><br/>
-スタイリスト歴:<%= @stylist.stylist_since %><br/>
-カット価格:<%= @stylist.cut_price %>
+スタイリスト歴:<%= Date.today.year - @stylist.stylist_since %>年<br/>
+カット価格:<%= @stylist.cut_price %>円<br/>
+メニュー一覧:<% @stylist.menus.each do |menu| %>
+  <%= menu.menu_name %>:<%= menu.menu_price %>円:<%= menu.operation_time %>分<br/>
+<% end %>
+
+
+<%= link_to '戻る', :back %>
