--- a/app/views/admin/stylist_reservations/index.html.erb
+++ b/app/views/admin/stylist_reservations/index.html.erb
@@ -4,6 +4,33 @@
 
 <div style="width:80%; border: 1px solid;float: right; margin: auto 0;padding-left: 20px;">
   <h3>予約可能時間一覧</h3>
+
+  <%= form_for(@reservation, url: admin_stylist_stylist_reservations_path) do |f| %>
+    <div>
+      <%= f.label :Menu %>
+      <%= f.collection_select :menu_id, current_stylist.menus.all, :id, :menu_name %>
+    </div>
+
+    <div>
+      <%= f.label :book_time %>
+      <%= f.datetime_select :book_time, minute_step: 5 %>
+    </div>
+
+    <div>
+      <%= f.label :operation_time %>
+      <%= f.number_field :operation_time, min: 0, step: 5 %>
+    </div>
+
+    <div>
+      <%= f.label :memo %>
+      <%= f.text_field :memo %>
+    </div>
+
+    <div>
+      <%= f.submit '登録' %>
+    </div>
+  <% end %>
+  <br/>
   <% @books.each.with_index(1) do |book, i| %>
     <%= i %>.<%= link_to book.book_time.strftime('%Y年%m月%d日 %H:%M'), admin_stylist_stylist_reservation_path(id: book.id) %><br/>
   <% end %>
