--- a/app/views/admin/salon_reservations/new.html.erb
+++ b/app/views/admin/salon_reservations/new.html.erb
@@ -6,10 +6,7 @@
     </div>
 
     <%= f.label :book_time %>
-    <%= f.datetime_field :book_time %>
+    <%= f.datetime_select :book_time, minute_step: 15 %>
   </div>
   <%= f.submit '登録' %>
 <% end %>
-
-
-aaaaaaa
