--- a/app/views/admin/salon_reservations/_book_new.html.erb
+++ b/app/views/admin/salon_reservations/_book_new.html.erb
@@ -2,7 +2,7 @@
   <%= render 'shared/error_messages', object: f.object %>
 
   <div class="field">
-    <%= f.label :book_time %>
+    <%= f.label :時間 %>
     <%= f.datetime_select :book_time, minute_step: 15 %>
   </div>
   <%= f.submit '登録' %>
