--- a/app/views/admin/stylist_reservations/index.html.erb
+++ b/app/views/admin/stylist_reservations/index.html.erb
@@ -7,22 +7,17 @@
 
   <%= form_for(@reservation, url: admin_stylist_stylist_reservations_path) do |f| %>
     <div>
-      <%= f.label :Menu %>
-      <%= f.collection_select :menu_id, current_stylist.menus.all, :id, :menu_name %>
-    </div>
-
-    <div>
-      <%= f.label :book_time %>
+      <%= f.label :時間 %><br/>
       <%= f.datetime_select :book_time, minute_step: 5 %>
     </div>
 
     <div>
-      <%= f.label :operation_time %>
+      <%= f.label :施術時間 %><br/>
       <%= f.number_field :operation_time, min: 0, step: 5 %>
     </div>
 
     <div>
-      <%= f.label :memo %>
+      <%= f.label :備考 %><br/>
       <%= f.text_field :memo %>
     </div>
 
