--- a/app/views/admin/salons/_sidebar.html.erb
+++ b/app/views/admin/salons/_sidebar.html.erb
@@ -1,6 +1,7 @@
 <ul>
   <li><%= link_to current_salon.name, admin_salon_path %></li>
-  <li><%= link_to "予約可能時間管理", admin_salon_salon_reservations_path %></li>
+  <li><%= link_to "予約時間管理", admin_salon_salon_reservations_path %></li>
+  <li><%= link_to '予約管理', "#" %></li>
   <li><%= link_to "所属スタイリスト", admin_salon_stylists_path %></li>
   <li><%= link_to "売上管理", "#" %></li>
   <li><%= link_to '顧客カルテ管理', "#" %></li>
