--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,7 @@
-<h1><%= @user.name %></h1>
-
-<%= link_to 'EDIT', edit_user_registration_path %>
+<h2><%= @user.name %></h2>
+<% @user.reservations.each do |r| %>
+  <%= r.salon_reservation.book_time.strftime('%Y年%m月%d日 %H:%M') %><br/>
+<% end %>
+<%= link_to 'ログアウト',  destroy_user_session_path, method: :delete %><br/>
+<%= link_to 'Edit', edit_user_path %><br/>
+<%= link_to 'Delete', user_path, method: :delete, data: { confirm: "You sure?" } %>
