--- a/app/views/admin/salon_reservations/show.html.erb
+++ b/app/views/admin/salon_reservations/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @book.salon.name %>の予約<%= @book.id %></h1>
 
-<%= @book.salon.name %><br/>
+<%= @book.simple_time %><br/>
 <%= @book.book_time %>
 <br/>
 
