--- a/app/views/layouts/_user_top.html.erb
+++ b/app/views/layouts/_user_top.html.erb
@@ -1,4 +1,9 @@
 <% if user_signed_in? %>
+  <h2><%= @user.name %></h2>
+  <%= link_to '予約', reservations_path %><br/>
+  <% @user.reservations.each do |r| %>
+    <%= r.salon_reservation.simple_time %>:<%= r.menu.menu_name %><br/>
+  <% end %>
   <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
   <%= link_to 'ユーザー情報編集', edit_user_registration_path %>
   <%= link_to 'アカウント削除', user_registration_path, method: :delete, data: { confirm: "You sure?" } %>
