--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -4,15 +4,13 @@
 <% end %>
 
 <h3>サロンから探す</h3>
-<% @salon_reservations.each.with_index(1) do |r, i| %>
-  <%= r.salon.name %>:
-  <%= r.book_time.strftime('%Y年%m月%d日 %H:%M') %><br/>
+<% @salons.each.with_index(1) do |r, i| %>
+  <li><%= link_to r.name, r %></li>
 <% end %>
 
 <h3>スタイリストから探す</h3>
-<% @stylist_reservations.each.with_index(1) do |r, i| %>
-  <%= r.stylist.name %>:
-  <%= r.book_time.strftime('%Y年%m月%d日 %H:%M') %><br/>
+<% @stylists.each.with_index(1) do |r, i| %>
+  <li><%= link_to r.name, r %></li>
 <% end %>
 
 <h3>直近の日時で探す</h3>
