--- a/app/views/layouts/_user_top.html.erb
+++ b/app/views/layouts/_user_top.html.erb
@@ -2,6 +2,7 @@
   <h2><%= @user.name %></h2>
   <%= link_to '予約', reservations_path %><br/>
   <% @user.reservations.each do |r| %>
+    <%= r.salon_reservation.salon.name %>:<%= r.stylist_reservation.stylist.name %>:
     <%= r.salon_reservation.simple_time %>:<%= r.menu.menu_name %><br/>
   <% end %>
   <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
